reports/gcn_decoding.log
Traceback (most recent call last):
  File "/home/haoting/.virtualenvs/brain_encoding_decoding/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/haoting/.virtualenvs/brain_encoding_decoding/lib/python3.8/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/haoting/.virtualenvs/brain_encoding_decoding/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/haoting/.virtualenvs/brain_encoding_decoding/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/haoting/.virtualenvs/brain_encoding_decoding/lib/python3.8/site-packages/nbclient/client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "/home/haoting/.virtualenvs/brain_encoding_decoding/lib/python3.8/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/haoting/.virtualenvs/brain_encoding_decoding/lib/python3.8/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings(action='once')
from nilearn.regions import RegionExtractor

extractor = RegionExtractor(components_img, threshold=0.5,
                            low_pass=0.1, high_pass=0.01, t_r=2,
                            detrend=True, standardize=True,
                            thresholding_strategy='ratio_n_voxels',
                            extractor='local_regions',
                            standardize=True)
# Just call fit() to process for regions extraction
extractor.fit()
# Extracted regions are stored in regions_img_
regions_extracted_img = extractor.regions_img_
# Each region index is stored in index_
regions_index = extractor.index_
# Total number of regions extracted
n_regions_extracted = regions_extracted_img.shape[-1]

# Visualization of region extraction results
title = ('%d regions are extracted from %d components.'
         '\nEach separate color of region indicates extracted region'
         % (n_regions_extracted, 20))
plotting.plot_prob_atlas(regions_extracted_img, 
                         bg_img=mean_haxby, 
                         view_type='filled_contours',
                         title=title)

X = extractor.transform(func_file)
print(X.shape)
------------------

[0;36m  File [0;32m"/tmp/ipykernel_410960/974585604.py"[0;36m, line [0;32m10[0m
[0;31m    standardize=True)[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m keyword argument repeated

SyntaxError: keyword argument repeated (974585604.py, line 10)

